<package>
  <name>rviz_python_tutorial</name>
  <version>0.8.4</version>
  <description>
     Tutorials showing how to call into rviz internals from python scripts.
  </description>
  <maintainer email="hersh@willowgarage.com">Dave Hershberger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/rviz_python_tutorial</url>
  <author>Dave Hershberger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rviz</build_depend>

  <run_depend>rviz</run_depend>

  <export>
      <rosdoc config="${prefix}/rosdoc.yaml"/>
  </export>
</package>
