<?xml version="1.0"?>
<package>
  <name>visualization_marker_tutorials</name>
  <version>0.10.5</version>
  <description>The visulalization_marker_tutorials package</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/visualization_marker_tutorials</url>

  <author>Josh Faust</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>