<package>
    <name>visualization_tutorials</name>
    <version>0.9.0</version>
    <description>
        Metapackage referencing tutorials related to rviz and visualization.
    </description>
    <maintainer email="william@osrfoundation.org">William Woodall</maintainer>
    <license>BSD</license>

    <url>http://ros.org/wiki/visualization_tutorials</url>
    <author>Dave Hershberger</author>
    <author>David Gossow</author>
    <author>Josh Faust</author>

    <buildtool_depend>catkin</buildtool_depend>

    <run_depend>interactive_marker_tutorials</run_depend>
    <run_depend>librviz_tutorial</run_depend>
    <run_depend>rviz_plugin_tutorials</run_depend>
    <run_depend>rviz_python_tutorial</run_depend>
    <run_depend>visualization_marker_tutorials</run_depend>

    <export>
        <metapackage/>
    </export>
</package>



