<package format="2">
    <name>visualization_tutorials</name>
    <version>0.10.3</version>
    <description>
        Metapackage referencing tutorials related to rviz and visualization.
    </description>
    <maintainer email="mabel@openrobotics.org">Mabel Zhang</maintainer>
    <license>BSD</license>

    <url>http://ros.org/wiki/visualization_tutorials</url>
    <author>Dave Hershberger</author>
    <author>David Gossow</author>
    <author>Josh Faust</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>interactive_marker_tutorials</exec_depend>
    <exec_depend>librviz_tutorial</exec_depend>
    <exec_depend>rviz_plugin_tutorials</exec_depend>
    <exec_depend>visualization_marker_tutorials</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
